[gd_scene load_steps=14 format=3 uid="uid://xo84ck2xlunk"]

[ext_resource type="Script" path="res://scripts/create_save_select.gd" id="1_2fidp"]
[ext_resource type="Texture2D" uid="uid://bl683wytdgvp" path="res://assets/backgrounds/BlurryBHS.png" id="2_544wl"]
[ext_resource type="Texture2D" uid="uid://b04vm3o2tsw0q" path="res://assets/Diamond.png" id="3_1c4go"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ewtoo"]
atlas = ExtResource("3_1c4go")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_exfni"]
atlas = ExtResource("3_1c4go")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ffln"]
atlas = ExtResource("3_1c4go")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_etwgk"]
atlas = ExtResource("3_1c4go")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_oavcb"]
atlas = ExtResource("3_1c4go")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho8g5"]
atlas = ExtResource("3_1c4go")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uk0u"]
atlas = ExtResource("3_1c4go")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhl5w"]
atlas = ExtResource("3_1c4go")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7rxc"]
atlas = ExtResource("3_1c4go")
region = Rect2(512, 512, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_td4fg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewtoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exfni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ffln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etwgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oavcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho8g5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uk0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhl5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7rxc")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2fidp")

[node name="SchoolwareLoadScreen" type="Sprite2D" parent="."]
position = Vector2(966, 531)
scale = Vector2(1.27438, 1.31149)
texture = ExtResource("2_544wl")

[node name="Node" type="Node" parent="."]

[node name="Button1" type="AnimatedSprite2D" parent="Node"]
position = Vector2(391, 270)
sprite_frames = SubResource("SpriteFrames_td4fg")
autoplay = "default"

[node name="save_1_button" type="Button" parent="Node"]
offset_left = 368.0
offset_top = 238.0
offset_right = 416.0
offset_bottom = 286.0

[node name="Button2" type="AnimatedSprite2D" parent="Node"]
position = Vector2(888, 256)
sprite_frames = SubResource("SpriteFrames_td4fg")
autoplay = "default"

[node name="save_2_button" type="Button" parent="Node"]
offset_left = 866.0
offset_top = 224.0
offset_right = 914.0
offset_bottom = 272.0

[node name="Button3" type="AnimatedSprite2D" parent="Node"]
position = Vector2(1464, 242)
sprite_frames = SubResource("SpriteFrames_td4fg")
autoplay = "default"

[node name="save_3_button" type="Button" parent="Node"]
offset_left = 1441.0
offset_top = 211.0
offset_right = 1489.0
offset_bottom = 259.0

[node name="Button4" type="AnimatedSprite2D" parent="Node"]
position = Vector2(410, 777)
sprite_frames = SubResource("SpriteFrames_td4fg")
autoplay = "default"

[node name="save_4_button" type="Button" parent="Node"]
offset_left = 385.0
offset_top = 747.0
offset_right = 433.0
offset_bottom = 795.0

[node name="Button5" type="AnimatedSprite2D" parent="Node"]
position = Vector2(902, 737)
sprite_frames = SubResource("SpriteFrames_td4fg")
autoplay = "default"

[node name="save_5_button" type="Button" parent="Node"]
offset_left = 884.0
offset_top = 710.0
offset_right = 932.0
offset_bottom = 758.0

[node name="Button6" type="AnimatedSprite2D" parent="Node"]
position = Vector2(1470, 761)
sprite_frames = SubResource("SpriteFrames_td4fg")
autoplay = "default"

[node name="save_6_button" type="Button" parent="Node"]
offset_left = 1454.0
offset_top = 727.0
offset_right = 1502.0
offset_bottom = 775.0

[connection signal="pressed" from="Node/save_1_button" to="." method="_on_save_1_button_pressed"]
[connection signal="pressed" from="Node/save_2_button" to="." method="_on_save_2_button_pressed"]
[connection signal="pressed" from="Node/save_3_button" to="." method="_on_save_3_button_pressed"]
[connection signal="pressed" from="Node/save_4_button" to="." method="_on_save_4_button_pressed"]
[connection signal="pressed" from="Node/save_5_button" to="." method="_on_save_5_button_pressed"]
[connection signal="pressed" from="Node/save_6_button" to="." method="_on_save_6_button_pressed"]
